--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -34,6 +34,7 @@
         .categorie-btn {
           border: none;
           background: transparent;
+          cursor: pointer;
         }
       }
     }
