Implement drag-and-drop file upload in AddBlogPage using react-dropzone

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --pale-blue: #f7f7ff;
   --light-lavender: #f5f4f9;
   --pale-pink: #faf2f3;
+  --pale-lavender: #f4f3ff;
+  --steel-gray: #85858d;
   --purple: #5d37f3;
   --bright-red: #ea1919;
   --charcoal: #1a1a1f;
