--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,15 @@
   --pale-purple: #e4e3eb;
   --soft-lilac: #f3f2fa;
   --pale-blue: #f7f7ff;
+  --whispering-blue: #f2f2fa;
   --light-lavender: #f5f4f9;
   --pale-pink: #faf2f3;
   --pale-lavender: #f4f3ff;
+  --pale-gray: #fcfcfd;
+  --lavender-mist: #f1effb;
   --steel-gray: #85858d;
   --purple: #5d37f3;
   --bright-red: #ea1919;
+  --green: #14d81c;
   --charcoal: #1a1a1f;
 }
