--- a/src/pages/AddBlogPage.module.scss
+++ b/src/pages/AddBlogPage.module.scss
@@ -2,6 +2,13 @@
   margin: 33px 480px 189px 76px;
   display: flex;
   gap: 240px;
+  .exit-btn {
+    width: 44px;
+    height: 44px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+  }
   .add-blog-form {
     .form-title {
       color: var(--charcoal);
@@ -34,7 +41,76 @@
         width: 40px;
         height: 40px;
         margin-bottom: 24px;
+        cursor: pointer;
       }
+      .file-select {
+        color: var(--charcoal);
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 20px;
+        text-decoration-line: underline;
+        cursor: pointer;
+      }
+    }
+    .drop-file-input:hover {
+      background: var(--lavender-mist);
+    }
+    .select-file-input {
+      height: 56px;
+      border: none;
+      padding: 16px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background: var(--whispering-blue);
+      .input-close-icon {
+        cursor: pointer;
+      }
+    }
+    .common-input-style {
+      width: 288px;
+      height: 44px;
+      margin-top: 8px;
+      padding-left: 16px;
+      border-radius: 12px;
+      border: 1px solid var(--pale-purple);
+      outline: none;
+      background: var(--pale-gray);
+    }
+    .common-input-style:focus {
+      border: 1.5px solid var(--purple) !important;
+    }
+    .input-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin: 24px auto 24px 0;
+      .validation-text {
+        list-style: none;
+      }
+      .valid {
+        color: var(--green);
+      }
+      .is-not-valid {
+        color: var(--bright-red);
+      }
+    }
+    .submit-btn {
+      display: flex;
+      width: 288px;
+      padding: 10px 20px;
+      margin-top: 40px;
+      justify-content: center;
+      align-items: center;
+      color: var(--white);
+      background: var(--purple);
+      border-radius: 8px;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 20px;
+      border: none;
+      cursor: pointer;
     }
   }
 }
