Set up React Router for pages navigation. Create a successful API POST request . Add a modal component to confirm successful blog submissions. Create BlogCard component

--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -18,3 +18,25 @@
     margin-top: 64px;
   }
 }
+
+.category-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.category {
+  list-style: none;
+  display: flex;
+  align-items: flex-start;
+  padding: 8px 16px;
+  gap: 10px;
+  border-radius: 30px;
+  background: rgba(255, 184, 47, 0.08);
+  .category-btn {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+  }
+}
