--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,11 @@
   --lavender-mist: #f1effb;
   --steel-gray: #85858d;
   --purple: #5d37f3;
+
   --bright-red: #ea1919;
   --green: #14d81c;
   --charcoal: #1a1a1f;
+}
+.no-scroll {
+  overflow: hidden;
 }
