--- a/src/components/common/BlogCard.module.scss
+++ b/src/components/common/BlogCard.module.scss
@@ -1,3 +1,73 @@
+.blog-card {
+  width: 408px;
+  .blog-card-image {
+    width: 408px;
+    height: 328px;
+    border-radius: 12px;
+  }
+  .blog-text-content {
+    width: 408px;
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    .blog-author {
+      color: var(--charcoal);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 20px;
+      margin-bottom: 8px;
+    }
+    .blog-publish-date {
+      color: var(--steel-gray);
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 16px;
+    }
+    .blog-title {
+      color: var(--charcoal);
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 28px;
+      height: 53px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .blog-categories {
+      display: flex;
+      gap: 16px;
+      list-style: none;
+      .category-list {
+        padding: 6px 10px;
+        border-radius: 30px;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 16px;
+      }
+    }
+    .blog-description {
+      color: var(--navy-gray);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 28px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
+
 .link {
   color: var(--purple);
   font-size: 14px;
