--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   --pale-gray: #fcfcfd;
   --lavender-mist: #f1effb;
   --steel-gray: #85858d;
+  --navy-gray: #404049;
   --purple: #5d37f3;
-
   --bright-red: #ea1919;
   --green: #14d81c;
   --charcoal: #1a1a1f;
