--- a/src/pages/BlogPage.module.scss
+++ b/src/pages/BlogPage.module.scss
@@ -1,1 +1,170 @@
- 
+.blog {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  background: var(--soft-lilac);
+  padding: 40px 76px;
+  .blog-card-wrapper {
+    display: flex;
+    justify-content: center;
+    .exit-btn {
+      width: 44px;
+      height: 44px;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
+    .blog-card {
+      margin-top: 40px;
+      width: 720px;
+      .blog-card-image {
+        width: 100%;
+        height: 328px;
+        border-radius: 12px;
+      }
+      .blog-text-content {
+        margin-top: 40px;
+        .blog-author {
+          color: var(--charcoal);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 20px;
+          margin-bottom: 8px;
+        }
+        .blog-publish-date {
+          margin-right: 8px;
+        }
+        .blog-data-email {
+          color: var(--steel-gray);
+          display: flex;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px;
+        }
+        .blog-title {
+          color: var(--charcoal);
+          font-size: 32px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 40px;
+          margin: 24px 0 24px 0;
+        }
+        .blog-categories {
+          display: flex;
+          gap: 16px;
+          .category-list {
+            padding: 6px 10px;
+            border-radius: 30px;
+          }
+        }
+        .blog-description {
+          color: var(--navy-gray);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28px;
+          margin-top: 40px;
+        }
+      }
+    }
+  }
+  .related-articles-heading {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 98px;
+    .related-posts-title {
+      color: var(--charcoal);
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 40px;
+    }
+    .navigation-controls {
+      display: flex;
+      gap: 24px;
+      .previous-article-btn,
+      .next-article-btn {
+        border: none;
+        background: transparent;
+        cursor: pointer;
+      }
+    }
+  }
+  .related-articles-container {
+    margin-top: 40px;
+    display: flex;
+    gap: 32px;
+    .related-blog-card {
+      width: 408px;
+      .related-blog-card-image {
+        width: 408px;
+        height: 328px;
+        border-radius: 12px;
+      }
+      .related-blog-text-content {
+        width: 408px;
+        margin-top: 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+        .related-blog-author {
+          color: var(--charcoal);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 20px;
+          margin-bottom: 8px;
+        }
+        .related-blog-publish-date {
+          color: var(--steel-gray);
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px;
+        }
+        .related-blog-title {
+          color: var(--charcoal);
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 28px;
+          height: 53px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .related-blog-categories {
+          display: flex;
+          gap: 16px;
+          list-style: none;
+          .related-category-list {
+            padding: 6px 10px;
+            border-radius: 30px;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 16px;
+          }
+        }
+        .related-blog-description {
+          color: var(--navy-gray);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+    }
+  }
+}
