--- a/src/pages/BlogPage.module.scss
+++ b/src/pages/BlogPage.module.scss
@@ -96,8 +96,13 @@
   .related-articles-container {
     margin-top: 40px;
     display: flex;
-    gap: 32px;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    // gap: 32px;
+    justify-content: space-between;
     .related-blog-card {
+      flex: 0 0 auto;
+      // margin-right: 20px;
       width: 408px;
       .related-blog-card-image {
         width: 408px;
