--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --pale-lavender: #f4f3ff;
   --pale-gray: #fcfcfd;
   --lavender-mist: #f1effb;
+  --light-blue: #ebeaef;
   --steel-gray: #85858d;
   --navy-gray: #404049;
   --lavender-gray: #d9d8e0;
