--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -85,13 +85,15 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            overflow: hidden;
+            // overflow: hidden;
             text-overflow: ellipsis;
           }
           .blog-categories {
             display: flex;
             gap: 16px;
             list-style: none;
+            overflow: hidden;
+            max-width: 100%;
             .category-list {
               padding: 6px 10px;
               border-radius: 30px;
@@ -99,6 +101,11 @@
               font-style: normal;
               font-weight: 500;
               line-height: 16px;
+              flex: 0 calc(25% - 25px);
+              text-align: center;
+              white-space: nowrap;
+              // overflow: hidden;
+              text-overflow: ellipsis;
             }
           }
           .blog-description {
@@ -117,4 +124,12 @@
       }
     }
   }
+}
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--purple);
+  margin-top: 50px;
+  font-size: 25px;
 }
