--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -17,7 +17,7 @@
     height: 40px;
     padding: 10px 20px;
     border-radius: 8px;
-    background: var(--purple);
+    background: var(--purple) !important;
     color: var(--white);
     font-size: 14px;
     font-style: normal;
