Add font, fixed minor issues

--- a/src/components/common/Modal.module.scss
+++ b/src/components/common/Modal.module.scss
@@ -8,6 +8,7 @@
   border-radius: 12px;
   background: var(--white);
   z-index: 2500;
+  font-family: "firago";
 }
 .overlay {
   position: absolute;
