--- a/src/modals/LoginModal.module.scss
+++ b/src/modals/LoginModal.module.scss
@@ -6,6 +6,7 @@
   border: none;
   background: transparent;
   cursor: pointer;
+  font-family: "firago";
 }
 .close-btn:hover {
   border-radius: 30px;
@@ -31,14 +32,15 @@
   width: 100%;
   height: 44px;
   border-radius: 12px;
-  border: 1.5px solid var(--pale-purple);
+  border: 1.5px solid var(--pale-purple) !important;
   outline: none;
   background: var(--pale-blue);
   margin: 8px 0;
   padding-left: 14px;
+  font-family: "firago";
 }
 .input:focus {
-  border: 1.5px solid var(--purple);
+  border: 1.5px solid var(--purple) !important;
 }
 .modal-btn {
   width: 100%;
@@ -53,4 +55,5 @@
   border-radius: 8px;
   border: none;
   cursor: pointer;
+  font-family: "firago";
 }
