--- a/src/pages/AddBlogPage.module.scss
+++ b/src/pages/AddBlogPage.module.scss
@@ -2,6 +2,7 @@
   margin: 40px auto 110px 76px;
   display: flex;
   gap: 21%;
+  font-family: "firago";
   .exit-btn {
     width: 44px;
     height: 44px;
@@ -10,6 +11,7 @@
     cursor: pointer;
   }
   .add-blog-form {
+    font-family: "firago";
     .form-title {
       color: var(--charcoal);
       font-size: 32px;
@@ -85,7 +87,7 @@
       border: 1.5px solid var(--pale-purple);
       outline: none;
       background: var(--pale-gray) !important;
-
+      font-family: "firago";
       &:focus {
         border: 1.5px solid var(--purple) !important;
       }
