--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -90,7 +90,7 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            // overflow: hidden;
+            overflow: hidden;
             text-overflow: ellipsis;
           }
           .blog-categories {
